--- a/.github/hello_world.yaml
+++ b/.github/hello_world.yaml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: test-lable
+    runs-on: test-label
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
